--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="disqus_thread"></div>
-<script>
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://superapp.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
+   <div id="hyvor-talk-view"></div>
+<script type="text/javascript">
+    var HYVOR_TALK_WEBSITE = 8591;
+    var HYVOR_TALK_CONFIG = {
+        url: false,
+        id: false
+    };
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script async type="text/javascript" src="//talk.hyvor.com/web-api/embed.js"></script>
 </body>
 </html>
