--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <div class="commentbox"></div>
 <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-<script>commentBox('my-project-id')</script>
+<script>commentBox('5705341165633536-proj')</script>
 </body>
 </html>
