--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <title>Document</title>
 </head>
 <body>
- <form action="submit-comment.php" method="post">
-  <label for="name">Nama:</label>
-  <input type="text" id="name" name="name" required>
-
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
-
-  <label for="comment">Komentar:</label>
-  <textarea id="comment" name="comment" required></textarea>
-
-  <button type="submit">Kirim</button>
-</form>
+<script defer src="https://cdn.commento.io/js/commento.js"></script>
+<div id="commento"></div>
 
 </body>
 </html>
